--- a/OTIGroupware/src/main/webapp/resources/css/main.css
+++ b/OTIGroupware/src/main/webapp/resources/css/main.css
@@ -46,7 +46,7 @@
 		background-color: #2C3639;
 	}
 	
-	#main_menu_logo div {
+	#main_menu_logo div, #header_box div, #sub_menu div{
 		display: flex;
 		justify-content: center;
 	}
@@ -61,12 +61,77 @@
 	}
 
 	.nav-item {
-		margin-top: 40px;
-		margin-bottom: 40px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+	
+	#header_box {
+		background-color: #2C3639;
+		border-radius: 10px;
+		width: 170px; 
+		height: 70px;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		font-size: 13px;
+	}
+
+	#header_line {
+		margin: 10px 10px 10px 90px;
+		background-color: #B3B3B3;
+  		height: 4px;
 	}
 	
 	#main_content {
-		margin-left: 90px;
+		margin-left: 70px;
 	}
 	
+	#sub_menu {
+		border-right: 4px solid #B3B3B3;
+		flex-grow: 1;
+		height: 80vh;
+		margin: 0px;
+		padding: 0px;
+	}
+	
+	#sub_menu_title {
+		font-size: 35px;
+		font-weight: bold;
+		color: #2C3639;
+	}
+	
+	#sub_menu_list a  {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 10px 0px;
+		font-size: 20px;
+		color: black;
+		font-weight: bold;
+		width: 60px;
+		height: 50px;
+	}
+	
+	#sub_menu_list a:hover {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 10px 0px;
+		font-size: 20px;
+		color: #858585;
+		font-weight: bold;
+		width: 60px;
+		height: 50px;
+		border-radius: 10px;
+		background-color: #E6E6E6;
+	}
+	
+	#content_sub_menu a {
+		color: #E6E6E6;
+	}
+	
+	#content_sub_menu a:focus {
+		border-bottom: 6px solid black;
+		color: black;
+	}
 }
