--- a/OTIGroupware/src/main/webapp/resources/css/login.css
+++ b/OTIGroupware/src/main/webapp/resources/css/login.css
@@ -34,6 +34,9 @@ button{
 	.logoForm img{
 		display:none;
 	}
+	.errorlogoForm img{
+		display:none;
+	}
 	.loginText{
 		heigth:50%;
 	}
@@ -48,6 +51,9 @@ button{
 	.logoForm img{
 		display:none;
 	}
+	.errorlogoForm img{
+		display:none;
+	}
 	.loginText{
 		heigth:50%;
 	}
@@ -55,6 +61,11 @@ button{
 
 .loginForm{
 	border : 3px solid #d9d9d9;
+	width:100%;
+	height:100%;
+}
+.errorloginForm{
+	border :none;
 	width:100%;
 	height:100%;
 }
@@ -98,3 +109,12 @@ button{
 	border-radius : 0px 0px 20px 0px; 
 	border : none;
 }
+.erroridnpw{
+	padding-top:50px;
+	width:100%;
+	color:#2c3639;
+	font-size:20;
+	font-weight: bold;
+	text-align: center;
+}
+
