--- a/OTIGroupware/src/main/webapp/resources/css/main.css
+++ b/OTIGroupware/src/main/webapp/resources/css/main.css
@@ -1,3 +1,27 @@
+/* Font */
+@font-face {
+    font-family: 'LINESeedKR-Bd';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SpoqaHanSansNeo-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'HallymGothic-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2204@1.0/HallymGothic-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+/* Layout - Mobile */
 @media all and (min-width:100px) and (max-width:386px) {
    #main_menu {
       display: flex;
@@ -37,13 +61,16 @@
    
 }
 
+
+/* Layout - PC */
 @media all and (min-width:386px) {
    #main_menu {
       z-index: 1;
       position: fixed;
-      width: 80px;
+      width: 100px;
       height: 100%;
-      background-color: #2C3639;
+      background:linear-gradient(45deg,#2F2642,#2C3639);
+   	  box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.25);
    }
    
    #main_menu_logo div, #header_box div, #sub_menu div{
@@ -53,6 +80,10 @@
    
    #main_menu_list {
       margin-top: 40px;
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 500;
+	  font-style: normal;
+	  font-size: 20px;
    }
    
    .nav-item div {
@@ -65,39 +96,75 @@
       margin-bottom: 20px;
    }
    
+   #emp_name {
+   	  font-family: 'LINESeedKR-Bd';
+	  font-weight: normal;
+      font-style: normal;
+      font-size: 30px;
+   }
+   
+   #emp_position {
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 500;
+	  font-style: normal;
+      font-size: 14px;
+   }
+
+   #emp_dep {
+   	  margin-left: 10px;
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 700;
+	  font-style: normal;
+      font-size: 17px;
+      color: #2F2642;
+   }
+   
    #header_box {
-      background-color: #2C3639;
+      background:linear-gradient(45deg,#2C3639,#2F2642);
       border-radius: 10px;
       width: 170px; 
-      height: 70px;
+      height: 80px;
       display: flex;
       justify-content: space-around;
       align-items: center;
       font-size: 13px;
+      box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 500;
+	  font-style: normal;
+      font-size: 14px;
    }
 
    #header_line {
-      margin: 10px 10px 10px 90px;
-      background-color: #B3B3B3;
-        height: 4px;
+      margin: 3px 10px 5px 110px;
+      background-color: #2F2642;
+      height: 2.4px;
    }
    
    #main_content {
-      margin-left: 70px;
+   	  padding-top: 10px;
+      padding-left: 120px;
+      font-family: 'SpoqaHanSansNeo-Regular';
+      font-weight: normal;
+      font-style: normal;
+      font-size: 10px;
    }
    
    #sub_menu {
-      border-right: 4px solid #B3B3B3;
+      border-right: 3px solid #2F2642;
       flex-grow: 1;
-      height: 80vh;
+      height: 84vh;
       margin: 0px;
       padding: 0px;
    }
    
    #sub_menu_title {
-      font-size: 35px;
+      font-size: 50px;
       font-weight: bold;
-      color: #2C3639;
+      color: #2F2642;
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 700;
+	  font-style: normal;
    }
    
    #sub_menu_list a  {
@@ -105,11 +172,13 @@
       justify-content: center;
       align-items: center;
       margin: 10px 0px;
-      font-size: 20px;
       color: black;
-      font-weight: bold;
-      width: 60px;
-      height: 50px;
+      width: 100px;
+      height: 70px;
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 500;
+	  font-style: normal;
+      font-size: 30px;
    }
    
    #sub_menu_list a:hover {
@@ -117,21 +186,30 @@
       justify-content: center;
       align-items: center;
       margin: 10px 0px;
-      font-size: 20px;
       color: #858585;
-      font-weight: bold;
-      width: 60px;
-      height: 50px;
+      width: 150px;
+      height: 70px;
       border-radius: 10px;
       background-color: #E6E6E6;
+      font-weight: 700;
+	  font-style: normal;
+      font-size: 30px;
    }
    
    #content_sub_menu a {
       color: #E6E6E6;
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 700;
+	  font-style: normal;
+      font-size: 30px;
    }
    
    #content_sub_menu a:focus {
       border-bottom: 6px solid black;
       color: black;
+      font-family: 'HallymGothic-Regular';
+	  font-weight: 700;
+	  font-style: normal;
+      font-size: 30px;
    }
 }
