--- a/OTIGroupware/src/main/webapp/resources/css/main.css
+++ b/OTIGroupware/src/main/webapp/resources/css/main.css
@@ -67,7 +67,7 @@
    #main_menu {
       z-index: 1;
       position: fixed;
-      width: 100px;
+      width: 90px;
       height: 100%;
       background:linear-gradient(45deg,#2F2642,#2C3639);
    	  box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.25);
@@ -84,6 +84,12 @@
 	  font-weight: 500;
 	  font-style: normal;
 	  font-size: 20px;
+   }
+   
+   #main_menu_list li:hover {
+   	  background-color: #525E75;
+   	  transition: 0.8s;
+   	  border-radius: 70px;
    }
    
    .nav-item div {
@@ -134,6 +140,12 @@
 	  font-style: normal;
       font-size: 14px;
    }
+   
+   #header_box a:hover {
+   	  background-color: #525E75;
+   	  transition: 0.8s;
+   	  border-radius: 50px;
+   }
 
    #header_line {
       margin: 3px 10px 5px 110px;
@@ -142,12 +154,12 @@
    }
    
    #main_content {
-   	  padding-top: 10px;
-      padding-left: 120px;
+/*    	  padding-top: 10px; */
+      padding-left: 100px;
       font-family: 'SpoqaHanSansNeo-Regular';
       font-weight: normal;
       font-style: normal;
-      font-size: 10px;
+      font-size: 16px;
    }
    
    #sub_menu {
@@ -212,4 +224,38 @@
 	  font-style: normal;
       font-size: 30px;
    }
+   
+   #quick_btn button {
+   	  border-radius: 10px;
+   	  background-color: #D9D9D9;
+   	  width: 100px;
+   	  height: 40px;
+	  font-weight: 700;
+      font-size: 13px;
+      margin: 5px 3px;
+   }
+   
+   #mail_mini_box {
+   	  border: 5px solid #D9D9D9;
+   	  border-radius: 10px;
+   	  height: 50px;
+   	  margin-bottom: 10px;
+   }
+   
+   #mini_box_font {
+   	  border-right: 3px solid #D9D9D9;
+   	  width: 110px;
+   	  height: 30px;
+   }
+   
+   #mini_box_number {
+   	  color: #FF5050;
+   	  font-size: 20px;
+   	  font-weight: 700px;
+   }
+   
+   #middle_box {
+   	   padding-left: 30px;
+   }
+   
 }
