--- a/OTIGroupware/src/main/webapp/resources/css/main.css
+++ b/OTIGroupware/src/main/webapp/resources/css/main.css
@@ -67,7 +67,7 @@
    #main_menu {
       z-index: 1;
       position: fixed;
-      width: 90px;
+      width: 75px;
       height: 100%;
       background:linear-gradient(45deg,#2F2642,#2C3639);
    	  box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.25);
@@ -83,7 +83,11 @@
       font-family: 'HallymGothic-Regular';
 	  font-weight: 500;
 	  font-style: normal;
-	  font-size: 20px;
+	  font-size: 11px;
+   }
+   
+   #main_menu_list img {
+   	  width: 40px;
    }
    
    #main_menu_list li:hover {
@@ -154,8 +158,7 @@
    }
    
    #main_content {
-/*    	  padding-top: 10px; */
-      padding-left: 100px;
+   	  padding-left: 80px;
       font-family: 'SpoqaHanSansNeo-Regular';
       font-weight: normal;
       font-style: normal;
