--- a/OTIGroupware/src/main/webapp/resources/css/mail.css
+++ b/OTIGroupware/src/main/webapp/resources/css/mail.css
@@ -8,8 +8,6 @@ button{
 } 
 
 
-
-
 /* The container <div> - needed to position the dropdown content */
 .row{
 	padding : 0px;
@@ -64,4 +62,38 @@ button{
 	text-align: center;
 	font-size:20px;
 	color:#2C3639;
+}
+
+/*메일쓰기*/
+.temp_btn{
+	width:100%;
+	height:100%;
+	background-color:#2C3639;
+	color:white;
+	border-radius:5px; 
+	font-size:20px;
+}
+.send_btn{
+	width:100%;
+	height:100%;
+	background-color:#ffc107;
+	border-radius: 5px;
+	font-size:20px;
+}
+.mailwrite input{
+	border:none;
+}
+.mailwrite{
+	border-bottom: 1px solid #d9d9d9;
+}
+.mailwrite *{
+	font-size:20px;
+}
+.mailfile{
+	font-size:20px;
+}
+.mailaddress{
+	width:100%;
+	height:100%;
+	background-color:#d9d9d9;
 }
