--- a/OTIGroupware/src/main/webapp/resources/css/addresspopup.css
+++ b/OTIGroupware/src/main/webapp/resources/css/addresspopup.css
@@ -20,27 +20,31 @@ p{
 	background-color: white;
 	border:none;
 }
-.cancle_btn{
+.cancle-btn{
 	border : none;
 	height:30px;
 	width:100%;
 	font-size:20;
 	font-weight: bold;
 	text-align: center;
-}
-input{
-	border : none;
-	height:30px;
-	width:100%;
-	font-size:20;
-	font-weight: bold;
-	text-align: center;
-	padding:0px;
+	border-radius:5px;
 }
 .cancle_btn:hover{
 	border : 2px solid black;
 }
 input:hover{
 	border : 2px solid black;
+}
+.submit-btn{
+	color:white;
+	background-color:#ffc107;
+	border-radius:5px;
+	border : none;
+	height:30px;
+	width:100%;
+	text-align: center;
+	padding:0px;
+	font-weight:bold;
+	font-size:20;
 }
 
