--- a/OTIGroupware/src/main/webapp/resources/css/mail.css
+++ b/OTIGroupware/src/main/webapp/resources/css/mail.css
@@ -1,6 +1,6 @@
 button{
 	border:none;
-	background-color: white;
+	background-color:transparent;
 }
 .table th{
 	border-top:none;
@@ -47,7 +47,7 @@ button{
    border-radius:0px 0px 20px 20px;
 }
 
-.delete_button{
+.delete-button{
 	width:50%;
 	height:30px;
 	background-color:#2C3639;
@@ -65,7 +65,7 @@ button{
 }
 
 /*메일쓰기*/
-.temp_btn{
+.temp-btn{
 	width:100%;
 	height:100%;
 	background-color:#2C3639;
@@ -73,7 +73,7 @@ button{
 	border-radius:5px; 
 	font-size:20px;
 }
-.send_btn{
+.send-btn{
 	width:100%;
 	height:100%;
 	background-color:#ffc107;
