--- a/OTIGroupware/src/main/webapp/resources/css/approval.css
+++ b/OTIGroupware/src/main/webapp/resources/css/approval.css
@@ -44,8 +44,7 @@
 }
 
 .table-line {
-	background-color: #2C3639;
-    border: 4px solid #2C3639;
+    border: 2px solid #858585;
     transform: rotate(0.42deg);
 }
 
