--- a/OTIGroupware/src/main/webapp/resources/css/main.css
+++ b/OTIGroupware/src/main/webapp/resources/css/main.css
@@ -83,17 +83,26 @@
       font-family: 'HallymGothic-Regular';
 	  font-weight: 500;
 	  font-style: normal;
-	  font-size: 11px;
+	  font-size: 13px;
    }
    
    #main_menu_list img {
    	  width: 40px;
    }
    
-   #main_menu_list li:hover {
-   	  background-color: #525E75;
-   	  transition: 0.8s;
-   	  border-radius: 70px;
+   #main_menu_list li {
+   	  display: grid;
+   	  justify-content: center;
+   }
+   
+   #main_menu_list a:hover {
+   	  display: grid;
+   	  justify-content: center;
+   	  width: 60px;
+   	  transform: scale(0.9);
+   	  background-color: #b8b5be;
+   	  transition: 0.3s;
+   	  border-radius: 10px;
    }
    
    .nav-item div {
@@ -102,6 +111,7 @@
    }
 
    .nav-item {
+      display: flex;
       margin-top: 20px;
       margin-bottom: 20px;
    }
@@ -132,23 +142,23 @@
    #header_box {
       background:linear-gradient(45deg,#2C3639,#2F2642);
       border-radius: 10px;
-      width: 170px; 
-      height: 80px;
+      width: 150px; 
+      height: 60px;
       display: flex;
       justify-content: space-around;
       align-items: center;
-      font-size: 13px;
       box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
       font-family: 'HallymGothic-Regular';
 	  font-weight: 500;
 	  font-style: normal;
-      font-size: 14px;
+      font-size: 11px;
    }
    
-   #header_box a:hover {
-   	  background-color: #525E75;
-   	  transition: 0.8s;
-   	  border-radius: 50px;
+   #header_box > div:hover {
+   	  transform: scale(0.85);
+   	  background-color: #b8b5be;
+   	  transition: 0.3s;
+   	  border-radius: 10px;
    }
 
    #header_line {
@@ -228,6 +238,19 @@
       font-size: 30px;
    }
    
+   #home_side_profile {
+   	  display: grid;
+   	  flex-grow: 1;
+   	  height: 75vh;
+   	  border-right: 3px solid black;
+   }
+   
+   #quick_btn {
+   	  display: grid;
+   	  justify-content: center;
+   	  grid-template-columns: 110px 110px;
+   }
+   
    #quick_btn button {
    	  border-radius: 10px;
    	  background-color: #D9D9D9;
@@ -237,10 +260,23 @@
       font-size: 13px;
       margin: 5px 3px;
    }
+
+   #quick_btn button:hover {
+   	  border-radius: 10px;
+   	  background-color: #2C3639;
+   	  width: 100px;
+   	  height: 40px;
+	  font-weight: 700;
+      font-size: 13px;
+      margin: 5px 3px;
+      transition: 0.3s;
+      color: white;
+   }
    
    #mail_mini_box {
    	  border: 5px solid #D9D9D9;
    	  border-radius: 10px;
+   	  width: 210px;
    	  height: 50px;
    	  margin-bottom: 10px;
    }
@@ -249,16 +285,31 @@
    	  border-right: 3px solid #D9D9D9;
    	  width: 110px;
    	  height: 30px;
+   	  margin-left: 20px;
+   	  font-weight: bold;
    }
    
    #mini_box_number {
    	  color: #FF5050;
    	  font-size: 20px;
    	  font-weight: 700px;
+   	  margin-left: 30px;
    }
    
    #middle_box {
    	   padding-left: 30px;
+   	   height: 35px;
+   }
+   
+   #recent_approval_box {
+   	  border-radius: 10px;
+   	  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
+   }
+   
+   #notice_box {
+   	  background-color: #D9D9D9;
+   	  border-radius: 10px;
+   	  box-shadow: 1px 1px 8px #626262;
    }
    
 }
