--- a/src/main/webapp/resources/css/vertical-layout-light/style.css
+++ b/src/main/webapp/resources/css/vertical-layout-light/style.css
@@ -20901,6 +20901,7 @@ code {
 
 /* Buttons */
 .btn, .fc button, .ajax-upload-dragdrop .ajax-file-upload, .swal2-modal .swal2-buttonswrapper .swal2-styled, .swal2-modal .swal2-buttonswrapper .swal2-styled.swal2-confirm, .swal2-modal .swal2-buttonswrapper .swal2-styled.swal2-cancel, .wizard > .actions a {
+  font-family: LeferiBaseType-RegularA;
   font-size: 0.875rem;
   line-height: 1;
   font-weight: 400;
@@ -26371,11 +26372,11 @@ table.dataTable tbody td.select-checkbox:after {
 /* Datepicker */
 .datepicker.datepicker-dropdown,
 .datepicker.datepicker-inline {
-  padding: 0;
-  width: 10%;
-  height: 37%;
-  max-width: 500px;
-  min-width: 250px;
+  padding: 3px;
+/*   width: 10%; */
+/*   height: 37%; */
+/*   max-width: 500px; */
+/*   min-width: 250px; */
 }
 
 .datepicker.datepicker-dropdown .datepicker-days,
