--- a/src/main/webapp/resources/css/vertical-layout-light/style.css
+++ b/src/main/webapp/resources/css/vertical-layout-light/style.css
@@ -8860,6 +8860,24 @@ table {
   border-collapse: collapse;
 }
 
+.table thead th {
+	font-family: 'Happiness-Sans-Title';
+	color: #4B49AC;
+	padding-bottom: 5px;
+}
+
+/* .table thead th:first-child { */
+/* 	border-radius: 5px 0px 0px 0px; */
+/* } */
+
+/* .table thead th:last-child { */
+/* 	border-radius: 0px 5px 0px 0px; */
+/* } */
+
+.table tbody {
+	border-top: 2px solid #4B49AC;
+}
+
 caption {
   padding-top: 1.125rem 1.375rem;
   padding-bottom: 1.125rem 1.375rem;
@@ -19368,6 +19386,13 @@ input:focus {
 @font-face {
     font-family: 'LeferiBaseType-RegularA';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiBaseType-RegularA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Happiness-Sans-Title';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/Happiness-Sans-Title.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
