--- a/src/main/webapp/resources/css/mail.css
+++ b/src/main/webapp/resources/css/mail.css
@@ -2,3 +2,10 @@ button{
 	border:none;
 	background-color:transparent;
 }
+.ahover:hover a{
+	text-decoration: none;
+	color:black;
+}
+.ahover:hover{
+	background-color:#e9ecef;
+}
